--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
+  font-size: 62.5%;
   box-sizing: border-box;
 }
 body {
@@ -9,14 +9,14 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #171e22;
-  color: white;
+  background-color: #000000;
+  color:white;
 }
 #root {
   height: 100%;
 }
 
-/* Layout */
+
 .grid-container {
   display: grid;
   grid-template-areas:
@@ -29,7 +29,7 @@ body {
 }
 header {
   grid-area: header;
-  background-color: #343a40;
+  background-color: #203040;
 }
 main {
   grid-area: main;
@@ -37,10 +37,9 @@ main {
 }
 footer {
   grid-area: footer;
-  background-color: #343a40;
+  background-color: #203040;
   color: #ffffff;
 }
-/* Common */
 h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
@@ -54,7 +53,7 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #ff8000;
+  color: #db8d3e;
 }
 ul {
   padding: 0;
@@ -64,22 +63,30 @@ ul {
 li {
   margin-top: 1rem;
 }
+input,
+select,
+textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem #a4a4a4 solid;
+  border: 0.1rem #000000 solid;
   font-size: 1.6rem;
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
+input:hover,
+select:hover,
+textarea:hover,
 button:hover {
   border: 0.1rem #404040 solid;
 }
 button.primary {
-  background-color: #f0c040;
+  background-color: #4086f0;
 }
 button.block {
   width: 100%;
@@ -93,6 +100,14 @@ a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
+}
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
 }
 .row {
   display: flex;
@@ -112,10 +127,17 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
+.min-30 {
+  min-width: 30rem;
+}
 
 /* Image */
 img {
   border-radius: 0.5rem;
+}
+img.small {
+  max-width: 5rem;
+  width: 100%;
 }
 img.medium {
   max-width: 29rem;
@@ -127,9 +149,9 @@ img.large {
 
 /* Card */
 .card {
-  border: 0.1rem #343a40;
-  background-color: #000000;
-  border-radius: #343a40;
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  border-radius: 0.5rem;
   margin: 1rem;
 }
 .card-body {
@@ -141,7 +163,6 @@ img.large {
 .price {
   font-size: 2rem;
 }
-/* Rating */
 .rating span {
   color: #f0c040;
   margin: 0.1rem;
@@ -149,7 +170,6 @@ img.large {
 .rating span:last-child {
   color: #404040;
 }
-/* Alert */
 .success {
   color: #20a020;
 }
